<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="ola_mundo">Ola mundo :)</string>
    <string name="txt_saldo_disponivel">Saldo disponível</string>
    <string name="txt_saldo_limite">Saldo + Limitesponível</string>
    <string name="txt_ver_extrato">Ver extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="txt_transferir">Transferir</string>
    <string name="txt_recarregar">Recarregar</string>
    <string name="txt_cartao_final">Cartão final</string>

</resources>